--- a/.github/workflows/copy_resume.yml
+++ b/.github/workflows/copy_resume.yml
@@ -25,7 +25,7 @@ jobs:
 
     - name: Copy and Replace PDF in Website Repository
       run: |
-        cp resume_repo/resume_latex/resume1.pdf website_repo/files/resume1.pdf
+        cp -f resume_repo/resume_latex/resume1.pdf website_repo/files/resume1.pdf
 
     - name: Commit and Push Changes
       working-directory: website_repo
