--- a/.github/workflows/sync_resume_pdf.yml
+++ b/.github/workflows/sync_resume_pdf.yml
@@ -1,37 +1,43 @@
-name: Sync Resume PDF
+name: Sync Resume PDF to GitHub Pages
 
+# Trigger the workflow when changes are pushed to the main branch and the resume1.pdf file is updated
 on:
   push:
+    branches:
+      - main
     paths:
       - 'resume_latex/resume1.pdf'
 
 jobs:
-  update-pdf:
+  sync-pdf:
     runs-on: ubuntu-latest
 
     steps:
+      # Step 1: Check out the 'resume' repository
       - name: Checkout resume repository
         uses: actions/checkout@v3
         with:
-          repository: ${{ github.repository }}
           path: resume
 
-      - name: Checkout pawankb13.github.io repository
+      # Step 2: Clone the 'pawankb13.github.io' repository
+      - name: Clone pawankb13.github.io repository
         uses: actions/checkout@v3
         with:
           repository: pawankb13/pawankb13.github.io
-          path: website
           token: ${{ secrets.GH_TOKEN }}
+          path: pawankb13.github.io
 
-      - name: Copy updated resume PDF
+      # Step 3: Copy updated resume1.pdf from 'resume' to 'pawankb13.github.io'
+      - name: Copy resume1.pdf to GitHub Pages repository
         run: |
-          cp -f resume/resume_latex/resume1.pdf website/files/resume1.pdf
+          cp resume/resume_latex/resume1.pdf pawankb13.github.io/files/
 
-      - name: Commit and push changes to pawankb13.github.io
-        working-directory: website
+      # Step 4: Commit and push changes to the 'pawankb13.github.io' repository
+      - name: Commit and push changes
+        working-directory: github_pages_repo
         run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
           git add files/resume1.pdf
-          git commit -m "Update resume1.pdf from resume repository"
-          git push
+          git commit -m "Update resume1.pdf"
+          git push origin main
