--- a/.github/workflows/sync_resume_pdf.yml
+++ b/.github/workflows/sync_resume_pdf.yml
@@ -34,7 +34,7 @@ jobs:
 
       # Step 4: Commit and push changes to the 'pawankb13.github.io' repository
       - name: Commit and push changes
-        working-directory: github_pages_repo
+        working-directory: /
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
